Work Notes app with Tags

--- a/performance/templates/acct/home.html
+++ b/performance/templates/acct/home.html
@@ -1,5 +1,6 @@
 {% extends 'acct/homebase.html' %}
 {% load static %}
+{% load bootstrap3 %}
 
 {% block title %}Productivity Portal{% endblock %}
 
@@ -8,7 +9,7 @@
   <div class="container">
       <div class="row v-center">
           <div class="col-xs-4">
-              <a href="#" class="thumbnail">
+              <a href="/fc/" class="thumbnail">
               <img src="{% static "img/notes.png" %}" alt="Notes" />
               </a>
           </div>
