--- a/performance/templates/cabinet/note_form.html
+++ b/performance/templates/cabinet/note_form.html
@@ -4,39 +4,49 @@
 
 {% block content %}
 <link rel="stylesheet" href="{% static "css/cabinet_table.css"%}">
-<div class="col-lg-2">
-  <h2>Tags</h2>
-  {% for tag in tags.object_list%}
-  <p id="tag_{{ tag }}">{{ tag }}</p>
-  {% endfor %}
+<div id="app">
+  <div id="tags" class="col-lg-2 vscroll">
+    <h2>Tags</h2>
+    {% for tag in tags.object_list%}
+    <p  id="tag_{{ forloop.counter }}" class=""
+        @mouseover="turnGreen"
+        @click="grabTag('{{ tag }}', 'tag_{{ forloop.counter }}')"
+        @mouseleave="turnBlack"
+        :class="{tagcolor: isActive == 'tag_{{ forloop.counter }}'}">{{ tag }}</p>
+    {% endfor %}
+  </div>
+      <div class="col-lg-8">
+        <h2 style="text-align: center;">Update/Edit Note</h2><br>
 
-</div>
-<div class="col-lg-8">
-  <form   method="post">{% csrf_token %}
-    <table align="center">
-      <tr>
-        <td style="text-align: center;">
-          {{ form.title }}
-        </td>
-      </tr>
-      <tr>
-          <td style="text-align: center;" >
-            {{ form.text }}
-          </td>
-      </tr>
-      <tr>
-          <td style="text-align: center;" >
-            {{ form.text_tag }}
-          </td>
-      </tr>
-    </table><br>
-    <div style="text-align:center;">
-      <button type="submit" value="Submit"class="btn btn-primary">Update</button>
+      <form   method="post">{% csrf_token %}
+        <table align="center">
+          <tr>
+            <td style="text-align: center; display:table-cell; width:200px">
+              {{ form.title }}
+            </td>
+          </tr>
+          <tr>
+              <td style="text-align: center; display:table-cell; width:100%" >
+                {{ form.text }}
+              </td>
+          </tr>
+          <tr>
+              <td style="text-align: center;  display:table-cell; width:100%" >
+                {{ form.text_tag }}
+              </td>
+          </tr>
+        </table><br>
+        <div style="text-align:center;">
+          <button type="submit" value="Submit"class="btn btn-primary">Update</button>
+        </div>
+      </form>
+      </div>
+    <div class="col-lg-2">
     </div>
-  </form>
 </div>
-<div class="col-lg-2">
-</div>
-
 
 {% endblock %}
+{% block extra_js %}
+<script src="/static/js/cabinet.js"></script>
+
+{% endblock%}
