--- a/performance/templates/cabinet/note_new.html
+++ b/performance/templates/cabinet/note_new.html
@@ -3,56 +3,61 @@
 
 
 {% block content %}
-<link rel="stylesheet" href="{% static "css/cabinet.css"%}">
-<div class="col-lg-2">
-  <h2>Tags</h2>
-  {% for tag in tags.object_list%}
-  <p id="tag_{{ tag }}">{{ tag }}</p>
-  {% endfor %}
+<link rel="stylesheet" href="{% static "css/cabinet_table.css"%}">
+<div id="app">
+  <div id="tags" class="col-lg-2 vscroll">
+    <h2>Tags</h2>
+    {% for tag in tags.object_list%}
+    <p  id="tag_{{ forloop.counter }}" class=""
+        @mouseover="turnGreen"
+        @click="grabTag('{{ tag }}', 'tag_{{ forloop.counter }}')"
+        @mouseleave="turnBlack"
+        :class="{tagcolor: isActive == 'tag_{{ forloop.counter }}'}">{{ tag }}</p>
+    {% endfor %}
+  </div>
+  <div class="col-lg-8">
+    <h2 style="text-align: center;">New Note</h2><br>
+      <form action = "{% url "cabinet:note_new" %}" method="post">{% csrf_token %}
+        <div style="text-align: center;">
+          {% if form.errors %}
+               {% for error in form.errors %}
+               <p class="error-message">
+                   <strong>{{ error }}</strong> was missing
+               </p>
+               {% endfor %}
+           {% endif %}      </div>
 
-</div>
-<div class="col-lg-8">
-  <h2 style="text-align: center;">New Note</h2><br>
-    <form action = "{% url "cabinet:note_new" %}" method="post">{% csrf_token %}
-      <div style="text-align: center;">
-        {% if form.errors %}
-             {% for error in form.errors %}
-             <p class="error-message">
-                 <strong>{{ error }}</strong> was missing
-             </p>
-             {% endfor %}
-         {% endif %}      </div>
-
-      <table align="center">
-        <tr class="spaceUnder">
-          <td style="text-align: center;">
-            <input type = "text"
-                placeholder = "Title Text" name = "title" />
-
-          </td>
-        </tr>
-        <tr>
+        <table align="center">
+          <tr class="spaceUnder">
             <td style="text-align: center;">
-              <textarea rows="10" cols="60" placeholder = "Great thoughts" name="text"></textarea>
+              <input type = "text"  style="display:table-cell; width:100%"
+                  placeholder = "Title Text" name = "title" />
+
             </td>
-        </tr>
-        <tr>
-            <td style="text-align: center;">
-              <input type = "text"
-                  placeholder = "Tags" name = "text_tag" />
-            </td>
-        </tr>
-      </table><br>
-      <div style="text-align:center;">
-        <button type="submit" value="Submit"class="btn btn-primary">Create</button>
-      </div>
+          </tr>
+          <tr>
+              <td style="text-align: center;">
+                <textarea rows="10" cols="60" placeholder = "Great thoughts" name="text"></textarea>
+              </td>
+          </tr>
+          <tr>
+              <td style="text-align: center;">
 
-
-    </form>
-
+                <input type = "text" style="display:table-cell; width:100%"
+                    placeholder = "Tags" name = "text_tag" v-model="currentTag" />
+              </td>
+          </tr>
+        </table><br>
+        <div style="text-align:center;">
+          <button type="submit" value="Submit"class="btn btn-primary">Create</button>
+        </div>
+      </form>
+    </div>
+    <div class="col-lg-2">
+    </div>
 </div>
-<div class="col-lg-2">
-</div>
-
-
 {% endblock %}
+{% block extra_js %}
+<script src="/static/js/cabinet.js"></script>
+
+{% endblock%}
