--- a/performance/templates/cabinet/Xhomebase.html
+++ b/performance/templates/cabinet/Xhomebase.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
+{% load static %}
+<!-- CORE BASE FILE -->
 <html>
   <head>
     <meta charset="utf-8">
+    <title>Productivity Portal</title>
     <!-- Latest compiled and minified JQuery -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 
@@ -12,12 +15,22 @@
     <script src="https://npmcdn.com/vue/dist/vue.js"></script>
 
 
+    {% block head_inject %}
+    {% endblock %}
+    {% load bootstrap3 %}
   </head>
   <body>
-    <object name="nav-bar" type="text/html" data="./homenavbar.html"></object>
+
+    {% include "acct/homenavbar.html" %}
     <div class="container">
+        {% block content %}
+
+        {% endblock %}
     </div>
 
   </body>
+  {% block extra_js%}
+
+  {% endblock %}
 
 </html>
