--- a/performance/templates/acct/change_password.html
+++ b/performance/templates/acct/change_password.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<link rel="stylesheet" href="{% static "css/forms.css"%}">
+<link rel="stylesheet" href="{% static "css/base.css"%}">
 <div class="text-center table table-hover text-centered">
   <h2>Edit Account Details</h2>
   <form method="post">
