--- a/performance/templates/acct/home.html
+++ b/performance/templates/acct/home.html
@@ -5,6 +5,7 @@
 {% block title %}Productivity Portal{% endblock %}
 
 {% block content %}
+<div id="acct">
   <h2>Productivity Portal</h2>
   <div class="container">
       <div class="row v-center">
@@ -25,4 +26,10 @@
           </div>
       </div>
   </div>
+</div>
+{% endblock %}
+{% block extra_js%}
+<!-- <script src="/static/js/global.js"></script> -->
+<script src="/static/js/acct.js"></script>
+
 {% endblock %}
