--- a/performance/templates/acct/homenavbar.html
+++ b/performance/templates/acct/homenavbar.html
@@ -60,9 +60,9 @@
             <li><a href="#">Preferences</a></li>
             <li><a href="#">Password</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Your Account</a></li>
-            <li><a href="#">Edit Account</a></li>
-            <li><a href="#">Change Password</a></li>
+            <li><a href="/account/account/">Your Account</a></li>
+            <li><a href="/account/edit_profile/">Edit Account</a></li>
+            <li><a href="/account/change_password/">Change Password</a></li>
           </ul>
         </li>
       </ul>
