--- a/performance/templates/cabinet/note_list.html
+++ b/performance/templates/cabinet/note_list.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<link rel="stylesheet" href="{% static "css/cabinet_table.css"%}">
+<link rel="stylesheet" href="{% static "css/base.css"%}">
 <div id="app">
 
 <div class="col-lg-2 vscroll">
