--- a/performance/templates/acct/edit_profile.html
+++ b/performance/templates/acct/edit_profile.html
@@ -4,7 +4,7 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-  <link rel="stylesheet" href="{% static "css/forms.css"%}">
+  <link rel="stylesheet" href="{% static "css/base.css"%}">
   <div class="text-center table table-hover text-centered">
     <h2>Edit Profile</h2>
     <form method="post">
