--- a/performance/templates/base.html
+++ b/performance/templates/base.html
@@ -8,7 +8,7 @@
 <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <!-- Local CSS definitions -->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/master.css' %}" >
+    <link rel="stylesheet" type="text/css" href="{% static 'css/landing.css' %}" >
   </head>
   <body>
     <nav class="navbar navbar-default navbar-static-top">
